--- a/public/cartpopup.html
+++ b/public/cartpopup.html
@@ -138,7 +138,7 @@
            }
          
        });
-    var response = axios.get(`http://localhost:2345/cart/`)
+    var response = axios.get(`https://cult-fit-clone-w13.herokuapp.com/cart/`)
     .then(function(response){
         console.log(response.data);
         myFuncN(response.data)
@@ -242,9 +242,9 @@
              deleteProd.src = "https://static.cure.fit/assets/images/modal-close.svg"
              deleteProd.addEventListener("click", function (index) {
                 console.log(nik["_id"])
-                axios.delete(`http://localhost:2345/cart/${nik["_id"]}`)
+                axios.delete(`https://cult-fit-clone-w13.herokuapp.com/cart/${nik["_id"]}`)
                 
-                var res = axios.get(`http://localhost:2345/cart/`)
+                var res = axios.get(`https://cult-fit-clone-w13.herokuapp.com/cart/`)
                 .then(function(res){
                     console.log(res.data);
                     myFuncN(res.data)
