--- a/public/productsDetails.html
+++ b/public/productsDetails.html
@@ -460,7 +460,7 @@
          console.log(data[0]._id)
     //    cartData.push(data[0])
        alert("Product added successfully")
-       var response = axios.post(`http://localhost:2345/cart/add`,{cartProdaddedId:data[0]._id})
+       var response = axios.post(`https://cult-fit-clone-w13.herokuapp.com/cart/add`,{cartProdaddedId:data[0]._id})
         // localStorage.setItem("addnik", JSON.stringify(cartData))
     })
 
@@ -484,7 +484,7 @@
                toggle = true;
                chiDiv.style.display = "block"
 
-               var response = axios.get(`http://localhost:2345/cart/store`)
+               var response = axios.get(`https://cult-fit-clone-w13.herokuapp.com/cart/store`)
                 .then(function(response){
                     storedata =response.data;
                     myFuncN(storedata,"store")
@@ -492,7 +492,7 @@
                     console.log(error);
                 })
              
-                var response = axios.get(`http://localhost:2345/cart/eat`)
+                var response = axios.get(`https://cult-fit-clone-w13.herokuapp.com/cart/eat`)
                 .then(function(response){
                     eatdata =response.data
                 }).catch(function (error) {
@@ -563,7 +563,7 @@
         Np2.addEventListener("click", function(){
             // scrollN.style.display="none"
             // myFuncN(eatdata)
-            res = axios.get(`http://localhost:2345/cart/eat`)
+            res = axios.get(`https://cult-fit-clone-w13.herokuapp.com/cart/eat`)
             .then(function(res){
                 eatdata = res.data
                 myFuncN(eatdata,"eat")
@@ -574,7 +574,7 @@
         })
         Np4.addEventListener("click",function (){
             // scrollN.style.display="none"
-            res = axios.get(`http://localhost:2345/cart/store`)
+            res = axios.get(`https://cult-fit-clone-w13.herokuapp.com/cart/store`)
             .then(function (res) {
                 storedata =res.data
                 myFuncN(storedata,"store")
@@ -639,9 +639,9 @@
              deleteProd.src = "https://static.cure.fit/assets/images/modal-close.svg"
              deleteProd.addEventListener("click", function (index) {
                 console.log(nik["_id"])
-                axios.delete(`http://localhost:2345/cart/store/${nik["_id"]}`)
+                axios.delete(`https://cult-fit-clone-w13.herokuapp.com/cart/store/${nik["_id"]}`)
                 .then(function(res){
-                    res = axios.get(`http://localhost:2345/cart/store`)
+                    res = axios.get(`https://cult-fit-clone-w13.herokuapp.com/cart/store`)
                     .then(function (res) {
                         storedata =res.data
                         myFuncN(storedata,"store")
@@ -800,10 +800,10 @@
              deleteProd.src = "https://static.cure.fit/assets/images/modal-close.svg"
              deleteProd.addEventListener("click", function (index) {
                 console.log(nik["_id"])
-                axios.delete(`http://localhost:2345/cart/eat/${nik["_id"]}`)
+                axios.delete(`https://cult-fit-clone-w13.herokuapp.com/cart/eat/${nik["_id"]}`)
                 .then(function(res){
                     console.log(res)
-                    res = axios.get(`http://localhost:2345/cart/eat`)
+                    res = axios.get(`https://cult-fit-clone-w13.herokuapp.com/cart/eat`)
                     .then(function(res){
                         eatdata = res.data
                         myFuncN(eatdata,"eat")
