--- a/public/cultpage.html
+++ b/public/cultpage.html
@@ -596,6 +596,7 @@
             /* text-align: center; */
             /* margin-left: -200px; */
             margin: auto;
+            
         }
 
         .fabutton {
@@ -899,6 +900,10 @@
             margin-top: -10px;
             width: 100%;
         }
+        /* #faqi{
+            display:none;
+        } */
+        /* #Nikfooter{display:none} */
     }
  @media screen and (min-width :481px) and (max-width : 900px){
             body{
