--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <title>Cult Fit</title>
 </head>
 <body>
-  <!-- navbar -->
+  <!-- navbar tab -->
     <div id="navbar">
       <div id="smallScreenNav">
         <div id="hamburgericon">
