--- a/public/index.html
+++ b/public/index.html
@@ -37,8 +37,8 @@
              </div>
              <div id="downLogin">
                 <div id="signin">SignIn</div>
-                <div >Cart</div>
-                <div>LogOut</div>
+                <div><a href="/cartpage.html">Cart</a></div>
+                <div><a href="/index.html">LogOut</a></div>
            </div>
         </div>
       </div>
