--- a/public/productsDetails.html
+++ b/public/productsDetails.html
@@ -9,6 +9,10 @@
     <title>Product Details</title>
     <link rel="icon" href="https://static.cure.fit/assets/images/favicon-modified.png" type="image/x-icon">
     <style>
+        body{
+            padding:0px; 
+            margin: 0px;
+        }
         #main {
             width: 100%;
             height: 1000px;
